Fix student profiles index layout issue

--- a/app/assets/stylesheets/student_profiles.scss
+++ b/app/assets/stylesheets/student_profiles.scss
@@ -85,7 +85,7 @@ div.student-profile-fans, div.student-profile-colleges {
 
 .student-profiles-index {
   margin-top: 15px;
-  min-height: 200px !important;
+  min-height: 220px !important;
 }
 
 .actions {
